# spatialmuon

./: .gitignore  .pre-commit-config.yaml  Readme.md  conda_requirements.yml  embl_cluster_env.yml  h5smu_specification.md  pyproject.toml  pytest.ini  pytest_env.yml  sandbox.py  setup.cfg  setup.py  test_rtree.py
.github/workflows/: codecov.yaml  pre-commit.yml  pythonpackage.yml
docs/source/: conf.py  index.rst
docs/source/api/: index.rst
scratch/: imc_scratch.py
spatialmuon/: __init__.py  __main__.py  cli.py  utils.py
spatialmuon/_core/: __init__.py  anchor.py  backing.py  bounding_box.py  converter.py  fieldofview.py  graph.py  image.py  index.py  io.py  mask.py  masks.py  plot.py  preproc.py  spatialmodality.py  spatialmudata.py  tiler.py
spatialmuon/datasets/: _utils.py  imc_cell_types.py  imc_download.py  imc_jeongbin.py  imc_metadata.py  seqfishplus.py  tomoseq_ikmi.py  visium_endometrium.py  visium_mousebrain.py  visium_vento.py
spatialmuon/datatypes/: array.py  datatypes_utils.py  raster.py  regions.py  singlemolecule.py
spatialmuon/processing/: accumulator.py  converter.py  tiler.py
spatialmuon/pyramid_container/: pyramid_container.py
tests/: conftest.py  test_spatial_mudata_object_creation.py  testing_utils.py
tests/_core/: test_anchor.py  test_converter.py  test_plot.py  test_spatialmodality.py  test_spatialmudata.py
tests/data/: generate_h5smu_example.py  generate_ome_example.py  generate_ome_example_masks.py  generate_scaled_visium.py  generate_small_imc.py  generate_small_visium.py  get_data.py  h5smu_example.h5smu  mask_left_eye.tiff  mask_mouth.tiff  mask_right_eye.tiff  ome_example.tiff  small_imc.h5smu  small_visium.h5smu  smily.tiff  test_generate_testdata.py  test_plot_small_imc.py  test_plot_small_visium.py
tests/datatypes/: test_raster.py
tests/test_core/: test_alignment.py  test_anchor.py  test_backing.py  test_converter.py  test_graphs.py  test_spatialmodality.py  test_spatialmudata.py  test_tiler.py  test_var_obs.py
tests/test_data/: test_plot_small_imc.py  test_plot_small_visium.py
tests/test_datatypes/: test_raster.py
tests/test_external/: test_squidpy_external.py
