[build-system]
requires = ["flit_core >=2,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.entrypoints."spatialmuon.datatypes"]
singlemolecule = "spatialmuon.datatypes.singlemolecule:SingleMolecule"
regions = "spatialmuon.datatypes.regions:Regions"
raster = "spatialmuon.datatypes.raster:Raster"

[tool.flit.metadata]
module = "spatialmuon"
author = "Ilia Kats"
author-email = "i.kats@dkfz-heidelberg.de"
#description-file = "README.md"
home-page = "https://github.com/ilia-kats/spatialmuon"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v2 (GPLv2)",
    "Operating System :: OS Independent",
    "Development Status :: 3 - Alpha",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Intended Audience :: Science/Research"
]
requires-python = ">= 3.9"
requires = [
    "numpy",
    "pandas",
    "Rtree",
    "geopandas",
    "scikit-image",
    "shapely",
    "trimesh",
    "ncls",
    "h5py >= 3",
    "anndata",
    "tqdm",
    "roifile",
]

#[tool.flit.metadata.requires-extra]
#docs = [
#    "sphinx >= 4.0",
#    "sphinx-rtd-theme",
#    "readthedocs-sphinx-search",
#    "nbsphinx",
#    "sphinx_automodapi"
#]
#
#[tool.flit.metadata.urls]
#Documentation = "https://muon.readthedocs.io/en/latest/"

[tool.flit.sdist]
exclude = [".github", "docs/build"]


[tool.black]
line-length = 100
target-version = ['py38']
