[metadata]
name = "spatialmuon"
version = "0.1.0"
classifiers = 
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v2 (GPLv2)
    Operating System :: OS Independent
    Development Status :: 3 - Alpha
    Topic :: Scientific/Engineering :: Bio-Informatics
    Intended Audience :: Science/Research

[options]
zip_safe = false
packages = find:
include_package_data = true
python_requires = >= 3.9
setup_requires = 
    setuptools >=39.2
    wheel >=0.30
install_requires = 
    numpy
    pandas
    Rtree
    geopandas
    scikit-image
    shapely
    trimesh
    ncls
    h5py >=3
    anndata
    tqdm
    roifile

[bdist_wheel]
universal = true
# exclude = [".github", "docs/build"]

# [options.entrypoints."spatialmuon.datatypes"]
# singlemolecule = "spatialmuon.datatypes.singlemolecule:SingleMolecule"
# array = "spatialmuon.datatypes.array:Array"
# raster = "spatialmuon.datatypes.raster:Raster"

[options.entry_points]
spatialmuon.datatypes =
    singlemolecule = spatialmuon.datatypes.singlemolecule:SingleMolecule
    array = spatialmuon.datatypes.array:Array
    raster = spatialmuon.datatypes.raster:Raster
